tests/src/frontend/visibility/invalid/private_constructor_1.sk
class X private ()

fun test(): void {
  _ = X()
}
